# ascot-firmware

./: Cargo.toml
ascot-axum/: Cargo.toml
ascot-axum/devices/ip-camera/: Cargo.toml  README.md
ascot-axum/devices/ip-camera/src/: info.rs  main.rs  screenshot.rs  stream.rs
ascot-axum/devices/light/src/: main.rs
ascot-axum/src/: device.rs  error.rs  lib.rs
ascot-axum/src/actions/: empty.rs  mod.rs  serial.rs  stream.rs
ascot-axum/src/devices/: fridge.rs  light.rs
ascot-controller/: Cargo.toml
ascot-controller/src/: controller.rs  device.rs  discovery.rs  error.rs  lib.rs  parameters.rs  policy.rs  request.rs  response.rs
ascot-controller/src/tests/: mod.rs
ascot-esp32c3/light/src/: main.rs
ascot-esp32c3/src/: device.rs  server.rs
ascot-library-stack/: Cargo.toml
ascot-library-stack/src/: parameters.rs  route.rs
src/: action.rs  actions.rs  device.rs  economy.rs  energy.rs  lib.rs  main.rs  parameters.rs  payloads.rs  response.rs  route.rs  server.rs  service.rs
src/utils/: heap.rs  stack.rs
