[package]
name = "ip-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lock = "3.3.0"
ascot-library = { version = "0.1.0", path = "../../../" }
ascot-axum = { version = "0.1.0", path = "../../" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
#flume = "0.10.14"
#tokio = { version = "1.0", features = ["full"] }
#tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Webcam framework
#
# To overcome mozjpeg undefined behaviour and build this dependency.
nokhwa = { version = "0.10.4", features = ["input-native", "serialize"], git = "https://github.com/kendfrey/nokhwa.git", branch = "0.10" }

# Image
[dependencies.image]
version = "0.25"
features = ["png"]
