[package]
name = "ip-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lock = "3.3.0"
ascot-library = { version = "0.1.0", path = "../../../" }
ascot-axum = { version = "0.1.0", path = "../../" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Webcam framework
nokhwa = { version = "0.10.7", features = ["input-native", "serialize", "output-threaded"] }

# Image
[dependencies.image]
version = "0.25"
features = ["png"]
